form/src/tests/derive/unimplemented/unimplemented_vector.stderr
error[E0277]: the trait bound `u32: form::Form` is not satisfied
  --> $DIR/unimplemented_vector.rs:22:1
   |
22 | #[form]
   | ^^^^^^^ the trait `form::Form` is not implemented for `u32`
   |
   = help: see issue #48214
   = note: this error originates in a derive macro (in Nightly builds, run with -Z macro-backtrace for more info)
